feat: finish ingredients html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
       </div>
     </header>
     <main class="main">
+      <section class="ingredients">
+        <div class="ingredients__container">
+          <div class="ingredients__content">
+            <div class="ingredients__body">
+              <h2 class="ingredients__title title title_white">Fine ingredients</h2>
+              <div class="ingredients__divider">
+                <img class="ingredients__img" src="assets/ingredients/img/divider.png" alt="divider">
+              </div>
+              <p class="ingredients__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what
+                keeps our customers coming
+                back for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet
+                coffees make us hard to resist! Stop in today and check us out!</p>
+              <div class="ingredients__list">
+                <div class="ingredients__image">
+                  <img class="ingredients__img" src="assets/ingredients/img/1.png" alt="1">
+                </div>
+                <div class="ingredients__image">
+                  <img class="ingredients__img" src="assets/ingredients/img/2.png" alt="2">
+                </div>
+                <div class="ingredients__image">
+                  <img class="ingredients__img" src="assets/ingredients/img/3.png" alt="3">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container"></div>
