--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="ingredients__body">
               <h2 class="ingredients__title title title_white">Fine ingredients</h2>
               <div class="ingredients__divider">
-                <img class="ingredients__img" src="assets/ingredients/img/divider.png" alt="divider">
+                <img class="ingredients__decor" src="assets/ingredients/img/divider.png" alt="divider">
               </div>
               <p class="ingredients__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what
                 keeps our customers coming
