feat: finish reviews html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
           </div>
         </div>
       </section>
+      <section class="reviews">
+        <div class="reviews__container">
+          <div class="reviews__content">
+            <div class="reviews__body">
+              <h2 class="reviews__title titles title_white">Guest Reviews</h2>
+              <div class="reviews__decor">
+                <img class="reviews__divider" src="assets/reviews/img/divider.png" alt="divider">
+              </div>
+              <p class="reviews__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps
+                our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,
+                muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!
+              </p>
+              <p class="reviews__label">- food inc, New York</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container"></div>
