feat: finish reviews css

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <div class="ingredients__content">
             <div class="ingredients__body">
               <h2 class="ingredients__title title title_white">Fine ingredients</h2>
-              <div class="ingredients__divider">
-                <img class="ingredients__decor" src="assets/ingredients/img/divider.png" alt="divider">
+              <div class="ingredients__decor">
+                <img class="ingredients__divider" src="assets/ingredients/img/divider.png" alt="divider">
               </div>
               <p class="ingredients__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what
                 keeps our customers coming
@@ -48,7 +48,7 @@
         <div class="reviews__container">
           <div class="reviews__content">
             <div class="reviews__body">
-              <h2 class="reviews__title titles title_white">Guest Reviews</h2>
+              <h2 class="reviews__title title title_white">Guest Reviews</h2>
               <div class="reviews__decor">
                 <img class="reviews__divider" src="assets/reviews/img/divider.png" alt="divider">
               </div>
