feat: finish about css

--- a/index.html
+++ b/index.html
@@ -20,20 +20,25 @@
       <section class="about">
         <div class="about__container">
           <div class="about__content">
-            <div class="about__body">
-              <h2 class="about__title title">Just the right food</h2>
-              <div class="ingredients__decor">
-                <img class="ingredients__divider" src="assets/about/img/divider.png" alt="divider">
-              </div>
-              <p class="about__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our
-                customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,
-                muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!</p>
-              <div class="about__sign">
-                <img class="about__img" src="assets/about/img/cook.png" alt="cook">
+            <div class="about__left">
+              <div class="about__body">
+                <h2 class="about__title title">Just the right food</h2>
+                <div class="about__decor">
+                  <img class="about__divider" src="assets/about/img/divider.png" alt="divider">
+                </div>
+                <p class="about__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps
+                  our
+                  customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,
+                  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!</p>
+                <div class="about__sign">
+                  <img class="about__img" src="assets/about/img/cook.png" alt="cook">
+                </div>
               </div>
             </div>
-            <div class="about__image">
-              <img class="about__img" src="assets/about/img/dish.png" alt="dish">
+            <div class="about__right">
+              <div class="about__image">
+                <img class="about__img" src="assets/about/img/dish.png" alt="dish">
+              </div>
             </div>
           </div>
         </div>
