--- a/index.html
+++ b/index.html
@@ -87,6 +87,38 @@
           </div>
         </div>
       </section>
+      <section class="reservations">
+        <div class="reservations__container">
+          <div class="reservations__content">
+            <div class="reservations__left">
+              <div class="reservations__images">
+                <div class="reservations__image">
+                  <img class="reservations__img" src="assets/reservations/img/1.jpg" alt="1">
+                </div>
+                <div class="reservations__image">
+                  <img class="reservations__img" src="assets/reservations/img/2.jpg" alt="2">
+                </div>
+              </div>
+            </div>
+            <div class="reservations__right">
+              <div class="reservations__body">
+                <h2 class="reservations__title title">Just the right food</h2>
+                <div class="reservations__decor">
+                  <img class="reservations__divider" src="assets/reservations/img/divider.png" alt="divider">
+                </div>
+                <p class="reservations__text">If you’ve been to one of our restaurants, you’ve seen – and tasted –
+                  what
+                  keeps our customers coming back
+                  for more. Perfect materials and freshly baked food.
+                  Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and check
+                  us
+                  out! Perfect materials and freshly baked food.</p>
+                <div class="reservations__form form">
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container"></div>
