feat: starts reservations css

--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
                   what
                   keeps our customers coming back
                   for more. Perfect materials and freshly baked food.
+                </p>
+                <p class="reservations__text">
                   Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and check
                   us
-                  out! Perfect materials and freshly baked food.</p>
+                  out! Perfect materials and freshly baked food.
+                </p>
                 <div class="reservations__form form">
                 </div>
               </div>
