--- a/index.html
+++ b/index.html
@@ -117,6 +117,39 @@
                   out! Perfect materials and freshly baked food.
                 </p>
                 <div class="reservations__form form">
+                  <div class="form__body">
+                    <div class="form__item">
+                      <label for="input_01">Name</label>
+                      <input tabindex="1" id="input_01" autocomplete="off" placeholder="Строка" name="string" value=""
+                        type="text">
+                    </div>
+                    <div class="form__item">
+                      <label for="input_02">Name</label>
+                      <input tabindex="2" id="input_01" autocomplete="off" placeholder="Строка" name="string" value=""
+                        type="text">
+                    </div>
+                    <div class="form__item">
+                      <label for="input_03">Date</label>
+                      <input tabindex="3" id="input_01" autocomplete="off" placeholder="Строка" name="string" value=""
+                        type="date">
+                    </div>
+                    <div class="form__item">
+                      <label for="select_04">Party number</label>
+                      <select tabindex="4" name="select">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                      </select>
+                    </div>
+                  </div>
+                  <button class="form__button" type="submit">
+                    Book now!
+                  </button>
                 </div>
               </div>
             </div>
