fix: improve reservations flex

--- a/index.html
+++ b/index.html
@@ -90,33 +90,29 @@
       <section class="reservations">
         <div class="reservations__container">
           <div class="reservations__content">
-            <div class="reservations__left">
-              <div class="reservations__images">
-                <div class="reservations__image">
-                  <img class="reservations__img" src="assets/reservations/img/1.jpg" alt="1">
-                </div>
-                <div class="reservations__image">
-                  <img class="reservations__img" src="assets/reservations/img/2.jpg" alt="2">
-                </div>
-              </div>
+            <div class="reservations__image">
+              <img class="reservations__img" src="assets/reservations/img/1.jpg" alt="1">
             </div>
-            <div class="reservations__right">
-              <div class="reservations__body">
-                <h2 class="reservations__title title">Just the right food</h2>
-                <div class="reservations__decor">
-                  <img class="reservations__divider" src="assets/reservations/img/divider.png" alt="divider">
+            <div class="reservations__image">
+              <img class="reservations__img" src="assets/reservations/img/2.jpg" alt="2">
+            </div>
+            <div class="reservations__body">
+              <div class="body-reservations">
+                <h2 class="body-reservations__title title">Just the right food</h2>
+                <div class="body-reservations__decor">
+                  <img class="body-reservationss__divider" src="assets/reservations/img/divider.png" alt="divider">
                 </div>
-                <p class="reservations__text">If you’ve been to one of our restaurants, you’ve seen – and tasted –
+                <p class="body-reservations__text">If you’ve been to one of our restaurants, you’ve seen – and tasted –
                   what
                   keeps our customers coming back
                   for more. Perfect materials and freshly baked food.
                 </p>
-                <p class="reservations__text">
+                <p class="body-reservations__text">
                   Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and check
                   us
                   out! Perfect materials and freshly baked food.
                 </p>
-                <form class="reservations__form form" action="#" method="get" enctype="multipart/form-data">
+                <form class="body-reservations__form form" action="#" method="get" enctype="multipart/form-data">
                   <div class="form__body">
                     <div class="form__item">
                       <label class="form__label" for="input_01">Name</label>
