fix: rename form input

--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
                     <div class="form__item">
                       <label class="form__label" for="input_01">Name</label>
                       <input class="form__input" tabindex="1" id="input_01" autocomplete="off" placeholder="your name *"
-                        name="string" value="" type="text">
+                        name="name" value="" type="text">
                     </div>
                     <div class="form__item">
                       <label class="form__label" for="input_02">Name</label>
                       <input class="form__input" tabindex="2" id="input_02" autocomplete="off"
-                        placeholder="your email *" name="string" value="" type="mail">
+                        placeholder="your email *" name="email" value="" type="email">
                     </div>
                     <div class="form__item">
                       <label class="form__label" for="input_03">Date</label>
                       <input class="form__input" tabindex="3" id="input_03" autocomplete="off" placeholder="date *"
-                        name="string" value="" type="date">
+                        name="date" value="" type="date">
                     </div>
                     <div class="form__item">
                       <label class="form__label" for="select_04">Party number</label>
-                      <select class="form__select" tabindex="4" id="select_04" name="select">
+                      <select class="form__select" tabindex="4" id="select_04" name="party-number">
                         <option class="form__option" disabled="" selected="" hidden="" value="">party number</option>
                         <option class="form__option" value="1">1</option>
                         <option class="form__option" value="2">2</option>
